# racefacer-results-html

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  test-ws-server.py
socketio/: race-summary.py
static/: race.js
templates/: _message.html  index.html
tests/: PLAN.md  conftest.py  mock_ws_server.py  test_app_factory.py  test_filters.py  test_process_data.py  test_write_jsonl.py
tests/fixtures/: sample_message.json
tests/ui/: conftest.py  harness.html  test_blink.py  test_clock.py  test_elapsed.py  test_highlight.py  test_smoke.py
tools/: convert_to_csv.py  replay_race.py
